fix(annotation): prevent collapse of annotation property list

--- a/src/neuroglancer/annotation/user_layer.css
+++ b/src/neuroglancer/annotation/user_layer.css
@@ -27,6 +27,7 @@
 .neuroglancer-annotation-shader-property-list {
   max-height: 8em;
   overflow: auto;
+  flex-shrink: 0;
 }
 
 .neuroglancer-annotation-shader-property {
